Clean coded computeCartTotal